tests/toylang/neg/001455_mutation.toylang
program a = { var a : 0 int; } .
